--- a/is322-final-project/public/index.html
+++ b/is322-final-project/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
